<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.vsmtifitness.Recipies"
    android:background="#191010">

    <TextView android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:text="@string/recipies"
        android:layout_marginStart="0dp"
        android:layout_alignParentTop="true"
        android:textStyle="bold|italic"
        android:textColor="#7c7a7a" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1000"
        android:id="@+id/button1000"
        android:layout_below="@+id/textView5"
        android:layout_toEndOf="@+id/textView5" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1200"
        android:id="@+id/button1200"
        android:layout_below="@+id/button1000"
        android:layout_alignStart="@+id/button1000" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1500"
        android:id="@+id/button1500"
        android:layout_alignTop="@+id/button1000"
        android:layout_toEndOf="@+id/button1000" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1800"
        android:id="@+id/button1800"
        android:layout_below="@+id/button1500"
        android:layout_alignStart="@+id/button1500" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="95dp"
        android:layout_alignTop="@+id/button1000"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:text="@string/choose_plan"
        android:id="@+id/buttonPlanPicker"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/calories_list"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:textColor="#525050"
        android:textStyle="bold|italic" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="99dp" />

</RelativeLayout>