<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.example.vsmtifitness.LogIn">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user_name"
        android:id="@+id/textView2"
        android:layout_marginTop="86dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:hint="@string/enter_the_user_name"
        android:singleLine="true"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/passwordl"
        android:id="@+id/textView3"
        android:layout_below="@+id/name"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:layout_below="@+id/textView3"
        android:hint="@string/enter_your_password"
        android:singleLine="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/button"
        android:layout_alignTop="@+id/button3"
        android:onClick="Login"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:onClick="Register"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button"
        android:layout_marginBottom="40dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/nameGoodImage"
        android:src="@drawable/goodblock"
        android:layout_below="@+id/textView2"
        android:layout_toEndOf="@id/name"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordBadImage"
        android:src="@drawable/badblock"
        android:layout_alignBottom="@+id/password"
        android:layout_alignTop="@+id/password"
        android:layout_alignEnd="@+id/nameGoodImage"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/nameBadImage"
        android:src="@drawable/badblock"
        android:layout_below="@+id/textView2"
        android:layout_toEndOf="@id/name"
        android:visibility="invisible" />

</RelativeLayout>
