<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fitsSystemWindows="true"
    android:background="@color/background"
    tools:context="com.example.vsmtifitness.WorkoutActivity">

    <com.google.android.material.appbar.AppBarLayout android:layout_height="wrap_content"
        android:layout_width="match_parent" android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar"
            android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" app:popupTheme="@style/AppTheme.PopupOverlay" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_nworkout"
                android:gravity="center"
                android:id="@+id/buttonText1"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:onClick="addWorkout"
                android:clickable="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_nworkout"
                android:gravity="center"
                android:id="@+id/buttonText2"
                android:onClick="removeWorkout"
                android:layout_marginLeft="20dp"
                android:clickable="true"
                android:layout_alignTop="@+id/buttonText1"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule_nworkout"
                android:gravity="center"
                android:id="@+id/buttonText3"
                android:layout_alignTop="@+id/buttonText2"
                android:layout_alignParentEnd="true"
                android:onClick="scheduleWorkout"
                android:clickable="true"/>

        </RelativeLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_workout" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>